--- a/styles/styles.css
+++ b/styles/styles.css
@@ -19,11 +19,13 @@ main {
   background-color: hsl(0, 0%, 100%);
   width: 330px;
   padding: 20px;
-  border-radius: 10px;
+  border: 1px solid hsl(0, 0%, 7%);
+  border-radius: 12px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   gap: 16px;
+  box-shadow: 10px 10px 1px rgb(0, 0, 0);
 }
 .blog-image {
   width: 330px;
